Merge feature branch changes into master: ajout CRUD Dépenses, intégration sidebar, corrections UI